# ChangeLog for x11-wm/xpde
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpde/ChangeLog,v 1.6 2003/08/15 08:06:02 seemant Exp $

*xpde-0.4.0 (15 Aug 2003)

  15 Aug 2003; Seemant Kulleen <seemant@gentoo.org> xpde-0.1.1.ebuild,
  xpde-0.2.0.ebuild, xpde-0.3.0.ebuild, xpde-0.4.0.ebuild:
  version bump

*xpde-0.3.5 (23 Jun 2003)

  23 Jun 2003; Seemant Kulleen <seemant@gentoo.org> xpde-0.3.5.ebuild:
  version bump

*xpde-0.3.0 (19 Mar 2003)

  19 Mar 2003; Martin Schlemmer <azarah@gentoo.org> xpde-0.2.0.ebuild :
  New version.

*xpde-0.2.0 (17 Feb 2003)

  17 Feb 2003; Nick Hadaway <raker@gentoo.org> xpde-0.2.0.ebuild,
  files/digest-xpde-0.2.0 :
  Version bump.  Lots of little changes.

*xpde-0.1.1 (07 Dec 2002)

  07 Dec 2002; Seemant Kulleen <seemant@gentoo.org> xpde-0.1.1.ebuild
  ChangeLog files/digest-xpde-0.1.1 :
  New desktop environment designed to look and feel like WindowsXP.  Since
  they now have designed their own window manager instead of dressing up
  metacity, it is added into portage.  Be warned that the functionality is
  limited at best.