@@ -1,7 +1,7 @@
-MD5 e7d16f104123709d5e7d24ec14b477c5 xpde-0.4.0.ebuild 1717
-MD5 fd602d6355ea062942f54538c1c31eea ChangeLog 1147
-MD5 33b6bb4d3e5eaeb83bfdf8bdf9478ab6 xpde-0.3.5.ebuild 1717
-MD5 974815ed8d41ed47a88ecc145c156d87 files/xpde 149
+MD5 52b3bd5bc030f6e402f67f7b5967fba3 ChangeLog 1279
+MD5 f79c3ad4c469fc687a6fd9f4d4331218 xpde-0.3.5.ebuild 1684
+MD5 80072589fd00450d3a4d7393c0ffd05a xpde-0.4.0.ebuild 1684
 MD5 97e6c2dc937af7b7d66566cc25a8d558 files/digest-xpde-0.3.5 72
 MD5 7d9936062181818ce6a8d0f2bccee241 files/digest-xpde-0.4.0 73
 MD5 db1a32cc23b76d0feb1ff8c3790bb543 files/install-config.sh 220
+MD5 974815ed8d41ed47a88ecc145c156d87 files/xpde 149
