@@ -1,24 +1,23 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpde/xpde-0.4.0.ebuild,v 1.1 2003/08/15 08:06:02 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpde/xpde-0.4.0.ebuild,v 1.2 2004/03/28 04:47:05 mr_bones_ Exp $
 
-IUSE=""
-S="${WORKDIR}/${P}"
 DESCRIPTION="A Desktop Environment modelled after the O/S from Redmond, WA"
 HOMEPAGE="http://www.xpde.com/"
 SRC_URI="http://www.xpde.com/releases/${P}-20030730.tar.gz"
 
-SLOT="0"
 LICENSE="GPL-2"
+SLOT="0"
 KEYWORDS="~x86 -ppc -sparc -alpha"
+IUSE=""
 
 DEPEND="virtual/x11"
 
 src_compile() {
-	einfo ""
+	einfo
 	einfo "This is a binary-only package (sadly)"
 	einfo "No files to compile."
-	einfo ""
+	einfo
 }
 
 src_install() {
@@ -58,10 +57,10 @@ src_install() {
 }
 
 pkg_postinst() {
-	einfo ""
+	einfo
 	einfo "sh /opt/xpde/bin/install-config.sh"
-	einfo ""
+	einfo
 	einfo "This will install a default configuration into your"
 	einfo "home directory"
-	einfo ""
+	einfo
 }
